feat: modified top ten so it has number of played games into account